# JBTestSuite

./: .env.example  .gitignore  AI_FRONTEND_INTEGRATION_SUMMARY.md  CLAUDE.md  ELEVATOR_PITCH.md  LICENSE  PROJECT_STORY.md  README.md  SIMPLE_AI_INTEGRATION_DEMO.md  TECH_STACK.md  docker-compose.yml  package-lock.json  test_data_consistency_manual.py  test_frontend_integration.py
claude/docs/: ROADMAP.md
claude/plans/: PHASE-2-BREAKDOWN-2025-08-26-14-30-00.md  PHASE-3-UI-INTEGRATION-BREAKDOWN-2025-08-26-14-45-00.md  PLAN-001-jbtestsuite-implementation-roadmap.md  STEP-1-API-INTEGRATION-SUMMARY-2025-08-26-14-50-00.md  STEP-3-COMPLETION-SUMMARY-2025-08-26-14-30-00.md
claude/tickets/: TICKET-001-foundation-infrastructure-setup.md  TICKET-002-core-data-layer-implementation.md  TICKET-003-phase-3-basic-ui-integration.md  TICKET-004-phase-4-selenium-integration-points.md  TICKET-005-comprehensive-testing-phase-3.md  ticket-list.md
client/: .cta.json  .env.development  Dockerfile  index.html  package-lock.json  package.json  requirements.txt  tsconfig.json  vite.config.ts  vitest.config.ts
client/src/: index.css  main.tsx  routeTree.gen.ts  vite-env.d.ts
client/src/api/: client.ts  index.ts  mock-data.ts  testCases.ts  utils.ts
client/src/components/: CreateTestCaseForm.tsx  Header.tsx  TestCaseList.tsx
client/src/hooks/: index.ts  useAI.ts  useAIAnalysis.ts  useAIConsole.ts  useAccessibility.ts  useAdvancedSearch.test.ts  useAdvancedSearch.ts  useCompetitionAI.ts  useTestCaseFilters.ts  useTestCases.ts  useWebSocket.ts
docs/: README.md  architecture.md  installation.md  quick-start.md  user-guide.md
docs/api/: README.md
docs/backend/: README.md
docs/database/: README.md
docs/development/: setup.md
docs/features/: ai.md  selenium.md  test-management.md  websockets.md
docs/frontend/: README.md
docs/infrastructure/: README.md
docs/integrations/: README.md
docs/troubleshooting/: common-issues.md  faq.md
server/: .env.example  Dockerfile  README.md  alembic.ini  competition_analysis_1.json  competition_analysis_2.json  competition_analysis_3.json  pyproject.toml  requirements.txt  test.db  test_competition_analysis.py
server/alembic/: env.py
server/alembic/versions/: 001_add_comprehensive_enhanced_models.py  ec0a854f128c_create_test_cases_table.py
server/src/: cli.py  main.py
server/src/ai/: openai_client.py  openai_service.py
server/src/api/: __init__.py  health.py  schemas.py  test_cases.py  tests.py  websocket.py  websockets.py
server/src/api/schemas/: __init__.py  artifacts.py  base.py  configuration.py  test_definition.py  test_execution.py
server/src/api/v1/: __init__.py  ai.py  artifacts.py  configurations.py  debug.py  executions.py  selenium.py  suites.py  tests.py
server/src/core/: __init__.py  config.py  database.py  logging.py  seeder.py
server/src/models/: __init__.py  artifacts.py  base.py  configuration.py  test_case.py  test_definition.py  test_execution.py  test_result.py
server/src/selenium/: __init__.py  browser.py  webdriver_manager.py
server/src/services/: __init__.py  test_execution_orchestrator.py  test_executor.py
server/tests/: conftest.py  test_api_tests.py  test_data_consistency_fix.py  test_integration.py  test_test_case_crud_comprehensive.py
(+70 files in other folders)
